# axiom-comp-playground

./: Cargo.toml  README.md  print_all  tree
examples/: empty_circuit.rs  factorisation_circuit.rs  multi_promise_circuit.rs  secret_account_circuit.rs  secret_storage_circuit.rs  zkevm_circuit.rs
src/: factorisation_circuit.rs  main.rs  secret_account_circuit.rs
