[package]
name = "temp-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axiom-eth = { git = "https://github.com/axiom-crypto/axiom-eth", tag = "axiom-eth-v0.4.0" }
axiom-eth = { path = "../axiom-eth/axiom-eth" }
# axiom-eth = { path = "../axiom-eth/axiom-eth", default-features = false, features = ["halo2-pse", "aggregation", "evm"] }
anyhow = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
halo2-utils = { path = "../../../opensource/personal/halo2-utils", features = ["circuit-params"]}

[patch."https://github.com/privacy-scaling-explorations/halo2"]
halo2_proofs = { path = "../../../opensource/external/pse/halo2/halo2_proofs" }